2005-09-07  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/GapContent.java:
	Fixes Bug #PR22966
	(getOffset): Fixed check, was redundant.

2005-09-07  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/GapContent.java:
	Fixes Bug #PR22966
	(getOffset): Added check for mark <= gapEnd

2005-09-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/JApplet.java
	(AccessibleJApplet): New inner class.
	(getAccesibleContext): Implemented accessibility support.
	* javax/swing/JDialog.java
	(AccessibleJDialog): New inner class.
	(getAccesibleContext): Implemented accessibility support.
	* javax/swing/JFrame.java
	(AccessibleJFrame): New inner class.
	(getAccesibleContext): Implemented accessibility support.
	* javax/swing/JWindow.java
	(AccessibleJWindow): New inner class.
	(getAccesibleContext): Implemented accessibility support.

2005-09-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/JPanel.java
	(AccessibleJPanel): New inner class.
	(getAccessibleContext): Implemented this method.

2005-09-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/JPanel.java: Reformatted to match our coding
	standards.

2005-09-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/JViewport.java
	(AccessibleJViewport): New inner class.
	(getAccessibleContext): New method. Implements the Accessible
	interface for JViewport.

2005-09-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(HorizontalSliderThumbIcon.paintIcon): handle disabled component state,
	and fetch colors from the look and feel,
	(VerticalSliderThumbIcon.paintIcon): likewise,
	* javax/swing/plaf/metal/MetalSliderUI.java
	(MetalPropertyListener): implemented,
	(constructor): added color initialisation,
	(createUI): reimplemented to return a new instance every time,
	(createPropertyChangeListener): return a new instance of 
	MetalPropertyListener,
	(paintTrack): reimplemented to handle track fill option, and the 
	disabled component state,